	* ESP32 Serial: Add logic to prevent infinite loops in interrupt handler
	  (2016-12-18).
	* Xtensa ESP32: Automatically mount /proc at start-up (2016-12-19).
	* Xtensa ESP32: Corrects timer initialization and timer input frequency
	  (2016-12-19).
	* Tiva PWM: Support PWM_PULSECOUNT feature for TI tiva.  From Young.Mu
	  (2016-12-20).
	* Xtensa ESP32: Missing prologue/epilogue macros on C callable function
	  (2016-12-20).
	* Xtensa ESP32: Update APP CPU startup logic to match current Expressif
	  example code.  Fix errors APP CPU startup (2016-12-20).
	* fs/procfs: Fix procfs status for SMP case (2016-12-20).
	* Xtensa ESP32:  Clock frequency is different if running from IRAM or is
	  booting from FLASH.   This is a booltloader issue (2016-12-20).
	* Xtensa ESP32:  Basic port is function in both single CPU and dual CPU
	  SMP configurations.  There is an NSH configuration for each CPU
	  configuration (2016-12-21).
	* STM32 F4: Merge in support for the Olimex STM32 P407 board (2016-12-21).
	* Xtensa ESP32: Add an OS test to verify the port (2016-12-22).
	* Xtensa ESP32:  Corrects a problem with dispatching to signal handlers:
	  Cannot vector directly to the signal handling function as in other ABIs
	  under the Xtensa Window ABI.  In that case, we need to go through a
	  tiny hook when performs the correct window call (call4) otherwise
	  registers will be scrambled in the signal handler (2016-12-22).
	* SAMV7 CAN: Make delete_filter functions more robust.  From Frank
	  Benkert (2016-12-23).
	* Xtensa ESP32: Add stack checking logic (2016-12-23).
	* sched note: record ID enumeration now results on constant values; ID
	  values do not change with configuration.  This makes writing
	  post-processing software much easier (2016-12-24).
	* STM32 F3: Forgot to update chip.h for STM32F303x[BC]'s 4 ADCs
	  (2016-12-24).
	* STM32 F4: Allow dma in 1 bit mode in STM32F4xxx.  From David Sidrane
	  (2016-12-24).

7.20 2017-xx-xx Gregory Nutt <gnutt@nuttx.org>