@@ -44,6 +44,7 @@
 #include <nuttx/arch.h>
 #include <nuttx/sched_note.h>
 
+#include "irq/irq.h"
 #include "sched/sched.h"
 
 /****************************************************************************
@@ -113,16 +114,30 @@ int sched_unlock(void)
 #endif
 
           /* Release any ready-to-run tasks that have collected in
-           * g_pendingtasks.  In the SMP case, the scheduler remains
-           * locked if interrupts are disabled.
+           * g_pendingtasks.
            *
            * NOTE: This operation has a very high likelihood of causing
            * this task to be switched out!
            */
 
 #ifdef CONFIG_SMP
-          if (!spin_islocked(&g_cpu_schedlock) && g_pendingtasks.head != NULL)
+          /* In the SMP case, the tasks remains pend(1) if we are
+           * in a critical section, i.e., g_cpu_irqlock is locked , or (2)
+           * other CPUs still have pre-emption disabled, i.e.,
+           * g_cpu_schedlock is locked.  In those cases, the release of the
+           * pending tasks must be deferred until those conditions are met.ing 
+           */
+
+          if (!spin_islocked(&g_cpu_schedlock) &&
+              !spin_islocked(&g_cpu_irqlock) &&
+              g_pendingtasks.head != NULL)
 #else
+          /* In the single CPU case, decrementing irqcount to zero is
+           * sufficient to release the pending tasks.  Further, in that
+           * configuration, critical sections and pre-emption can operate
+           * fully independently.
+           */
+
           if (g_pendingtasks.head != NULL)
 #endif
             {
